Refactored the single GPU version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,31 +60,14 @@ add_subdirectory(Impl)
 add_subdirectory(examples)
 
 add_executable( "chase_driver" tests/noinput.cpp )
-#target_link_libraries(chase_driver chase_cpu)
-target_link_libraries(chase_driver chase_mpi)
+target_link_libraries(chase_driver chase_cpu)
 target_include_directories(chase_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
-option(ENABLE_NSIGHT "Enable profiling with Nvidia Nsight Systems" OFF)
-
-install( TARGETS chase_algorithm
-  EXPORT chase-headers
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  )
-
-install(DIRECTORY algorithm DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-  FILES_MATCHING
-    PATTERN "*.hpp"
-    PATTERN "*.inc"
-)
-
-install(EXPORT chase-headers
-  NAMESPACE ChASE::
-  FILE chase-header.cmake
-  EXPORT_LINK_INTERFACE_LIBRARIES
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
-  )
+if(HAS_GPU_SUPPORT)
+add_executable( "chase_driver_gpu" tests/noinput.cpp )
+target_link_libraries(chase_driver_gpu chase_cpu chase_gpu)
+target_include_directories(chase_driver_gpu PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+endif()
 
 option(ENABLE_TESTS "Enable unit tests." OFF)
 if(ENABLE_TESTS)
