update the CMake structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,11 @@ add_subdirectory(examples)
 
 add_executable( "chase_driver" tests/noinput.cpp )
 target_link_libraries(chase_driver chase_cpu)
-target_include_directories(chase_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
+if(TARGET chase_gpu)
+add_executable( "chase_driver_gpu" tests/noinput.cpp )
+target_link_libraries(chase_driver_gpu chase_gpu)
+endif()
 
 option(ENABLE_TESTS "Enable unit tests." OFF)
 if(ENABLE_TESTS)
