--- a/Impl/CMakeLists.txt
+++ b/Impl/CMakeLists.txt
@@ -1,52 +1,10 @@
-add_library(chase_cpu INTERFACE)
+add_subdirectory(cpu)
 
-# Link against linalg libraries
-target_link_libraries(chase_cpu INTERFACE chase_algorithm blaspp linalg_internal_cpu)
-
-list(APPEND includePath ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories( chase_cpu INTERFACE
-  "$<BUILD_INTERFACE:${includePath}>"
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>  # <prefix>/include/ChASE-MPI
-)
-
-target_include_directories(chase_cpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_compile_definitions(chase_cpu INTERFACE NO_MPI=1 )
-
-find_package(MPI REQUIRED)
-add_library(chase_mpi INTERFACE)
-target_link_libraries(chase_mpi INTERFACE chase_algorithm blaspp linalg_internal_cpu)
-target_include_directories( chase_mpi INTERFACE
-  "$<BUILD_INTERFACE:${includePath}>"
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>  # <prefix>/include/ChASE-MPI
-)
-
-target_include_directories(chase_mpi INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_compile_definitions(chase_mpi INTERFACE NO_MPI=0 )
-
-if(CHASE_ENABLE_MIXED_PRECISION)
-    target_compile_definitions( chase_mpi INTERFACE
-	    "-DUSE_MPI_IO"
-	)
+if(TARGET linalg_internal_mpi)
+add_subdirectory(grid)
+add_subdirectory(mpi)
 endif()
 
-target_link_libraries(chase_mpi INTERFACE MPI::MPI_CXX)
-if(TARGET scalapackpp)
-  message("ScaLAPACK is enabled in ChASE-MPI")
-  target_link_libraries(chase_mpi INTERFACE scalapackpp)
-  target_compile_definitions(chase_mpi INTERFACE HAS_SCALAPACK=1 )
-endif()
-
-if(HAS_GPU_SUPPORT)
-add_library(chase_gpu INTERFACE)
-# Link against linalg libraries
-target_link_libraries(chase_gpu INTERFACE chase_algorithm blaspp linalg_internal_cpu cublaspp cusolverpp chase_cuda_kernels)
-
-list(APPEND includePath ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories( chase_gpu INTERFACE
-  "$<BUILD_INTERFACE:${includePath}>"
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>  # <prefix>/include/ChASE-MPI
-)
-
-target_include_directories(chase_gpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_compile_definitions(chase_gpu INTERFACE NO_MPI=1 HAS_CUDA=1)
+if(TARGET linalg_internal_cuda)
+add_subdirectory(cuda)
 endif()
