--- a/examples/0_hello_world/CMakeLists.txt
+++ b/examples/0_hello_world/CMakeLists.txt
@@ -1,2 +1,4 @@
+if(TARGET chase_mpi)
 add_executable( "0_hello_world.exe" "0_hello_world.cpp")
 target_link_libraries( "0_hello_world.exe" PRIVATE chase_mpi )
+endif()
