--- a/tests/linalg/internal/CMakeLists.txt
+++ b/tests/linalg/internal/CMakeLists.txt
@@ -1,4 +1,10 @@
 file(COPY QR_matrices DESTINATION ${CMAKE_BINARY_DIR}/tests/linalg/internal)
 add_subdirectory(cpu)
+
+if(TARGET chase_mpi)
 add_subdirectory(mpi)
+endif()
+
+if(TARGET chase_gpu)
 add_subdirectory(cuda)
+endif()
