--- a/tests/grid/CMakeLists.txt
+++ b/tests/grid/CMakeLists.txt
@@ -1,1 +1,5 @@
-setup_test(MpiGrid2DTest mpiGrid2D.cpp LIBRARIES chase_mpi)
+if(TARGET chase_gpu)
+    setup_test(MpiGrid2DTest mpiGrid2D.cpp LIBRARIES mpi_grid chase_gpu)
+else()
+    setup_test(MpiGrid2DTest mpiGrid2D.cpp LIBRARIES mpi_grid)
+endif()
