extend DistMatrix classes to support GPU, and implement numerical kernels for ChASE multiple-GPU version with NCCL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,15 +57,15 @@ endif()
 
 add_subdirectory(linalg)
 add_subdirectory(Impl)
-#add_subdirectory(examples)
+add_subdirectory(examples)
 
-#add_executable( "chase_driver" tests/noinput.cpp )
-#target_link_libraries(chase_driver chase_cpu)
+add_executable( "chase_driver" tests/noinput.cpp )
+target_link_libraries(chase_driver chase_cpu)
 
-#if(TARGET chase_gpu)
-#add_executable( "chase_driver_gpu" tests/noinput.cpp )
-#target_link_libraries(chase_driver_gpu chase_gpu)
-#endif()
+if(TARGET chase_gpu)
+add_executable( "chase_driver_gpu" tests/noinput.cpp )
+target_link_libraries(chase_driver_gpu chase_gpu)
+endif()
 
 option(ENABLE_TESTS "Enable unit tests." OFF)
 if(ENABLE_TESTS)
