--- a/linalg/CMakeLists.txt
+++ b/linalg/CMakeLists.txt
@@ -136,6 +136,12 @@ if(CMAKE_CUDA_COMPILER)
   target_link_libraries(distMatrix_gpu INTERFACE cublaspp cusolverpp linalg_internal_cuda)
   target_compile_definitions(distMatrix_gpu INTERFACE HAS_CUDA=1)
 
+  find_package(NCCL)
+  if(NCCL_FOUND)
+    add_library(linalg_internal_nccl INTERFACE)
+    target_include_directories(linalg_internal_nccl INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/internal/nccl)
+    target_link_libraries(linalg_internal_nccl INTERFACE mpi_grid_nccl linalg_internal_cuda)
+  endif()
   else()
   message(STATUS "No CUDA support")
 endif()
