--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,8 +54,8 @@ function(setup_test_serial name)
   add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 1 $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml)
 endfunction()
 
-#add_subdirectory(linalg)
+add_subdirectory(linalg)
 add_subdirectory(matrix)
-#if(TARGET mpi_grid)
-#add_subdirectory(grid)
-#endif()
+if(TARGET mpi_grid)
+add_subdirectory(grid)
+endif()
