Add ChASE multi-GPUs implementation with NCCL

--- a/examples/0_hello_world/CMakeLists.txt
+++ b/examples/0_hello_world/CMakeLists.txt
@@ -2,3 +2,8 @@ if(TARGET chase_mpi)
 add_executable( "0_hello_world.exe" "0_hello_world.cpp")
 target_link_libraries( "0_hello_world.exe" PRIVATE chase_mpi )
 endif()
+
+if(TARGET chase_nccl)
+add_executable( "0_hello_world_nccl.exe" "0_hello_world.cpp")
+target_link_libraries( "0_hello_world_nccl.exe" PRIVATE chase_nccl )
+endif()
