--- a/tests/linalg/internal/nccl/CMakeLists.txt
+++ b/tests/linalg/internal/nccl/CMakeLists.txt
@@ -4,3 +4,4 @@ setup_test(RayleighRitzGPUNCCLDistTest rayleighRitz.cpp LIBRARIES chase_nccl)
 setup_test(ResidualsGPUNCCLDistTest residuals.cpp LIBRARIES chase_nccl)
 setup_test(LanczosGPUNCCLDistTest lanczos.cpp LIBRARIES chase_nccl)
 setup_test(shiftDiagonalGPUNCCLDistTest shiftDiagonal.cpp LIBRARIES chase_nccl)
+setup_test(symOrHermGPUDistTest symOrHerm.cpp LIBRARIES chase_nccl)
