--- a/examples/2_input_output/CMakeLists.txt
+++ b/examples/2_input_output/CMakeLists.txt
@@ -18,6 +18,12 @@ if(POPL_FOUND)
     target_link_libraries( "2_input_output" PRIVATE chase_mpi )
     target_include_directories( "2_input_output" PRIVATE ${POPL_INCLUDE_DIR})
     target_compile_definitions( "2_input_output" PRIVATE PRINT_EIGENVALUES=1 USE_MPI=1)
+
+    add_executable( "2_input_output_blockcyclic" "2_input_output.cpp")
+    target_link_libraries( "2_input_output_blockcyclic" PRIVATE chase_mpi )
+    target_include_directories( "2_input_output_blockcyclic" PRIVATE ${POPL_INCLUDE_DIR})
+    target_compile_definitions( "2_input_output_blockcyclic" PRIVATE PRINT_EIGENVALUES=1 USE_MPI=1 USE_BLOCKCYCLIC=1)
+
   endif()
 
   if(TARGET chase_nccl)  
@@ -25,6 +31,12 @@ if(POPL_FOUND)
     target_link_libraries( "2_input_output_mgpu" PRIVATE chase_nccl )
     target_include_directories( "2_input_output_mgpu" PRIVATE ${POPL_INCLUDE_DIR})
     target_compile_definitions( "2_input_output_mgpu" PRIVATE PRINT_EIGENVALUES=1)
+
+    add_executable( "2_input_output_blockcyclic_mgpu" "2_input_output.cpp")
+    target_link_libraries( "2_input_output_blockcyclic_mgpu" PRIVATE chase_nccl )
+    target_include_directories( "2_input_output_blockcyclic_mgpu" PRIVATE ${POPL_INCLUDE_DIR})
+    target_compile_definitions( "2_input_output_blockcyclic_mgpu" PRIVATE PRINT_EIGENVALUES=1 USE_BLOCKCYCLIC=1)
+
   endif()
 
 else()
