try to fix the issue of linking MPI

--- a/linalg/CMakeLists.txt
+++ b/linalg/CMakeLists.txt
@@ -6,10 +6,11 @@ target_include_directories(matrix INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/matrix)
 target_link_libraries(matrix INTERFACE blaspp lapackpp linalg_internal_cpu)
 
 add_library(distMatrix INTERFACE)
-if(TARGET mpi_grid)
+find_package(MPI)
+if(MPI_FOUND)
 add_library(linalg_internal_mpi INTERFACE)
 target_include_directories(linalg_internal_mpi INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/internal/mpi)
-target_link_libraries(linalg_internal_mpi INTERFACE mpi_grid)
+target_link_libraries(linalg_internal_mpi INTERFACE MPI::MPI_CXX)
 target_include_directories(distMatrix INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/distMatrix)
 target_link_libraries(distMatrix INTERFACE blaspp lapackpp linalg_internal_mpi)
 endif()
