Add the support for redistribution from block-cyclic matrix to redundant matrix

--- a/tests/matrix/CMakeLists.txt
+++ b/tests/matrix/CMakeLists.txt
@@ -8,7 +8,7 @@ setup_test(MatrixCPUDistTest distMatrix.cpp LIBRARIES chase_mpi)
 setup_test(MultiVectorCPUDistTest distMultiVector.cpp LIBRARIES chase_mpi)
 
 if(TARGET chase_gpu)
-setup_test(MatrixGPUDistTest distMatrix.cpp LIBRARIES chase_mpi chase_gpu distMatrix_gpu)
+setup_test(MatrixGPUDistTest distMatrix.cpp LIBRARIES chase_mpi chase_gpu distMatrix_gpu mpi_grid_nccl)
 setup_test(MultiVectorGPUDistTest distMultiVector.cpp LIBRARIES chase_mpi chase_gpu distMatrix_gpu mpi_grid_nccl)
 endif()
 
