--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -11,11 +11,11 @@ set(DOXYGEN_HTML_OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html)
 message("DOXYGEN_HTML_OUTPUT = ${DOXYGEN_HTML_OUTPUT}")
 
 set(DOXYGEN_EXCLUDE_DIRS "${CMAKE_SOURCE_DIR}/build")
-
+#set(DOXYGEN_EXCLUDE_DIRS "${CMAKE_SOURCE_DIR}/tests")
 set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIRECTORY}/xml/index.xml)
 set(DOXYGEN_GENERATE_HTML YES)
 set(DOXYGEN_GENERATE_XML YES)
-set(DOXYGEN_PREDEFINED "HAS_CUDA")
+set(DOXYGEN_PREDEFINED "HAS_CUDA" "HAS_SCALAPACK" "USE_MPI" "HAS_NCCL")
 set(DOXYGEN_ENABLE_PREPROCESSING YES)
 set(DOXYGEN_MACRO_EXPANSION YES)
 set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
@@ -36,7 +36,7 @@ set(DOXYGEN_CLASS_GRAPH YES)
 set(DOXYGEN_COLLABORATION_GRAPH YES)
 #set(DOXYGEN_UML_LOOK YES)
 #set(DOXYGEN_UML_LIMIT_NUM_FIELDS 50)
-#set(DOXYGEN_TEMPLATE_RELATIONS YES)
+set(DOXYGEN_TEMPLATE_RELATIONS YES)
 #set(DOXYGEN_DOT_GRAPH_MAX_NODES 100)
 #set(DOXYGEN_MAX_DOT_GRAPH_DEPTH 0)
 #set(DOXYGEN_DOT_TRANSPARENT YES)
