Add Doxygen comments for distMatrix and distMultivector

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -28,6 +28,7 @@ set(DOXYGEN_EXTRACT_PRIVATE YES)
 set(DOXYGEN_EXTRACT_STATIC YES)
 set(DOXYGEN_TEMPLATE_RELATIONS YES)
 set(DOXYGEN_OPTIMIZE_FOR_FORTRAN YES)
+set(DOXYGEN_INLINE_INHERITED_MEMBERS YES)
 set(DOXYGEN_EXTRACT_ALL YES)
 set(DOXYGEN_CLASS_DIAGRAMS YES)
 #set(DOXYGEN_HIDE_UNDOC_RELATIONS NO)
