continue adding comments for Doxygen Docs

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -15,7 +15,7 @@ set(DOXYGEN_EXCLUDE_DIRS "${CMAKE_SOURCE_DIR}/build")
 set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIRECTORY}/xml/index.xml)
 set(DOXYGEN_GENERATE_HTML YES)
 set(DOXYGEN_GENERATE_XML YES)
-set(DOXYGEN_PREDEFINED "HAS_CUDA" "HAS_SCALAPACK" "USE_MPI" "HAS_NCCL" "ENABLE_MIXED_PRECISION")
+set(DOXYGEN_PREDEFINED "HAS_CUDA" "HAS_SCALAPACK" "USE_MPI" "HAS_NCCL" "ENABLE_MIXED_PRECISION" "CHASE_OUTPUT")
 set(DOXYGEN_ENABLE_PREPROCESSING YES)
 set(DOXYGEN_MACRO_EXPANSION YES)
 set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
