Add C/Fortran interface for sequential versions of ChASE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_subdirectory(grid)
 add_subdirectory(external)
 add_subdirectory(linalg)
 add_subdirectory(Impl)
+add_subdirectory(interface)
 add_subdirectory(examples)
 
 add_executable( "chase_driver" tests/noinput.cpp )
