fix a bug in gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build_cpu:
   - cmake --version
   - mkdir -p build
   - cd build
-  - FC=mpif90 CC=mpigcc CXX=mpicxx cmake -DCHASE_ENABLE_MIXED_PRECISION=ON -DENABLE_TESTS=ON -DMPI_RUN_ARGS="--allow-run-as-root" ..
+  - FC=mpif90 CC=mpicc CXX=mpicxx cmake -DCHASE_ENABLE_MIXED_PRECISION=ON -DENABLE_TESTS=ON -DMPI_RUN_ARGS="--allow-run-as-root" ..
   - make VERBOSE=1
   artifacts:
     paths:
