--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,8 @@ option(CHASE_ENABLE_OPENMP "Enable OpenMP support" ON)
 option(CHASE_ENABLE_MIXED_PRECISION "Enable mixed precision support" OFF)
 option(CHASE_ENABLE_MPI_IO "Enable MPI IO to read Hamiltonian matrix from local" OFF)
 option(CHASE_USE_NVTX "Enable NVTX for profiling" OFF)
-option(CHASE_BUILD_WITH_DOCS "Build the examples" ON)
+option(CHASE_BUILD_WITH_EXAMPLES "Build the examples" OFF)
+option(CHASE_BUILD_WITH_DOCS "Build the docs" OFF)
 
 if( CHASE_OUTPUT )
   target_compile_definitions( chase_algorithm  INTERFACE "-DCHASE_OUTPUT" )
@@ -66,7 +67,10 @@ add_subdirectory(external)
 add_subdirectory(linalg)
 add_subdirectory(Impl)
 add_subdirectory(interface)
-add_subdirectory(examples)
+
+if(CHASE_BUILD_WITH_EXAMPLES)
+    add_subdirectory(examples)
+endif()
 
 add_executable( "chase_driver" tests/noinput.cpp )
 target_link_libraries(chase_driver chase_cpu)
